k8s/chat-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 4
  selector:
    matchLabels:
      component: chat-app 
  template:
    metadata:
      labels:
        component: chat-app 
    spec:
      containers:
      - name: chat-app
        image: yusiangeng/chat-app-for-nginx:v1
        ports:
        - containerPort: 8081
